--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(raytracing_in_one_weekend)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(raytracing_in_one_weekend main.cpp)
+add_executable(raytracing_in_one_weekend main.cpp
+        vec3.h)
