setup color/point alias and refactor main class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(raytracing_in_one_weekend)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(raytracing_in_one_weekend main.cpp
-        vec3.h)
+        vec3.h
+        color.h)
